feat: update central dashboard header (replace title with ORDER and insert logo)

--- a/public/admin.html
+++ b/public/admin.html
@@ -64,8 +64,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="bi bi-box-seam me-2"></i>
-                Order Management
+                <img id="logo" src="logo.png" alt="ORDER Logo" style="height: 40px; margin-right: 10px;" />
+                ORDER
             </a>
             <div class="d-flex">
                 <button class="btn btn-outline-primary refresh-btn" onclick="loadOrders()">
