--- a/public/admin.html
+++ b/public/admin.html
@@ -64,7 +64,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img id="logo" src="logo.png" alt="ORDER Logo" style="height: 40px; margin-right: 10px;" />
+                <img id="logo" src="new-logo.png" alt="ORDER Logo" style="height: 40px; margin-right: 10px;" />
                 ORDER
             </a>
             <div class="d-flex">
